# termlm

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  SECURITY.md  SUPPORT.md
.githooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  extended-validation.yml  ollama-parity.yml  release.yml  reliability.yml  security.yml
crates/termlm-client/: Cargo.toml
crates/termlm-client/src/: alias_main.rs  lib.rs  main.rs  upgrade.rs
crates/termlm-config/: Cargo.toml
crates/termlm-config/src/: lib.rs
crates/termlm-core/: Cargo.toml
crates/termlm-core/src/: main.rs  provider_bootstrap.rs  shell_registry.rs  system_prompt.rs
crates/termlm-core/src/cache/: mod.rs
crates/termlm-core/src/context/: mod.rs
crates/termlm-core/src/ipc/: mod.rs
crates/termlm-core/src/performance/: mod.rs
crates/termlm-core/src/planning/: mod.rs
crates/termlm-core/src/source_ledger/: mod.rs
crates/termlm-core/src/tasks/: mod.rs
crates/termlm-indexer/: Cargo.toml
crates/termlm-indexer/benches/: hybrid_retrieval.rs
crates/termlm-indexer/src/: cheatsheet.rs  chunk.rs  embed.rs  extract.rs  lexical.rs  lib.rs  lookup.rs  retrieve.rs  scan.rs  store.rs  watch.rs
crates/termlm-inference/: Cargo.toml
crates/termlm-inference/src/: lib.rs  local_llama.rs  ollama.rs  tool_parser.rs
crates/termlm-local-tools/: Cargo.toml
crates/termlm-local-tools/src/: git_context.rs  lib.rs  list_workspace_files.rs  project_metadata.rs  read_file.rs  redaction.rs  search_files.rs  terminal_search.rs  text_detection.rs  workspace.rs
crates/termlm-protocol/: Cargo.toml
crates/termlm-protocol/src/: lib.rs
crates/termlm-safety/: Cargo.toml
crates/termlm-safety/src/: critical.rs  floor.rs  lib.rs  parse.rs
crates/termlm-test/: Cargo.toml
crates/termlm-test/src/: lib.rs  main.rs
crates/termlm-web/: Cargo.toml
crates/termlm-web/benches/: extract_pipeline.rs
crates/termlm-web/src/: cache.rs  config.rs  extract.rs  fetch.rs  lib.rs  search.rs  security.rs
docs/: README.md  adapter-contract.md  architecture.md  ci-workflows.md  cli-reference.md  compatibility-policy.md  config-reference.md  configuration.md  faq.md  getting-started.md  local-ci.md  models-and-licenses.md  operator-runbook.md  performance.md  quick-recipes.md  release-upgrades.md  requirements.md  spec-conformance-matrix.md  troubleshooting.md  zsh-adapter.md
plugins/zsh/: termlm.plugin.zsh
plugins/zsh/lib/: capture.zsh  ipc.zsh  shell-context.zsh  terminal-observer.zsh
plugins/zsh/widgets/: accept-line.zsh  approval.zsh  delete-char-or-list.zsh  escape.zsh  prompt-mode.zsh  safety-floor.zsh  self-insert.zsh
scripts/: install.sh
scripts/ci/: check_docs_links.py  lint_shell.sh  run_accuracy_gate.sh  run_local_ci.sh  summarize_accuracy_results.py
scripts/dev/: install_git_hooks.sh
scripts/release/: install_bundle.sh  package_release.sh  sign_and_notarize.sh
tests/adapter-contract/: README.md  zsh_adapter_contract.sh  zsh_pty_contract.zsh  zsh_runtime_behavior.zsh
tests/compatibility/: macos_profile.sh  plugin_manager_matrix.sh  ssh_env_smoke.sh  terminal_matrix.sh  zsh_wrapper_interop.zsh
tests/fixtures/: termlm-perf-suite.toml  termlm-test-suite.toml  termlm-usability-suite.toml
tests/integration/: indexer_e2e.rs  mock_daemon.rs  mock_plugin.rs  rag_relevance.rs
tests/perf/: hardware_matrix.sh  perf-gates.toml  real-runtime-gates.toml  terminal_observer_overhead.zsh
tests/release/: release_smoke.sh  upgrade_rehearsal.sh
tests/reliability/: reliability_drills.sh  soak_24h.sh
tests/usability/: zsh_user_journey.sh
