[package]
name = "termlm-client"
version.workspace = true
edition.workspace = true
license.workspace = true
autobins = false
default-run = "termlm-client"

[[bin]]
name = "termlm"
path = "src/alias_main.rs"

[[bin]]
name = "termlm-client"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
flate2 = "1"
futures-util.workspace = true
libc.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar = "0.4"
tempfile = "3"
tokio.workspace = true
tokio-serde.workspace = true
tokio-util.workspace = true
uuid.workspace = true

termlm-config = { path = "../termlm-config" }
termlm-protocol = { path = "../termlm-protocol" }
