[package]
name = "termlm-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["local-runtime", "ollama-http"]
runtime-stub = []
local-runtime = ["termlm-inference/local-runtime"]
ollama-http = ["termlm-inference/ollama-http"]

[dependencies]
arc-swap.workspace = true
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
libc.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-serde.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
uuid.workspace = true
futures-util.workspace = true
reqwest.workspace = true
sha2.workspace = true
regex.workspace = true
blake3.workspace = true

termlm-config = { path = "../termlm-config" }
termlm-inference = { path = "../termlm-inference" }
termlm-indexer = { path = "../termlm-indexer" }
termlm-local-tools = { path = "../termlm-local-tools" }
termlm-protocol = { path = "../termlm-protocol" }
termlm-safety = { path = "../termlm-safety" }
termlm-web = { path = "../termlm-web" }
