[package]
name = "termlm-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
half.workspace = true
memmap2.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
libc.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "hybrid_retrieval"
harness = false
