[package]
name = "termlm-inference"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["local-runtime", "ollama-http"]
local-runtime = ["dep:llama-cpp-2"]
ollama-http = []

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures-core.workspace = true
futures-util.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
encoding_rs = "0.8"
llama-cpp-2 = { version = "0.1.146", default-features = false, features = ["openmp"], optional = true }
