[package]
name = "termlm-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures-util.workspace = true
regex.workspace = true
reqwest.workspace = true
robotstxt.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
once_cell.workspace = true
url.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "extract_pipeline"
harness = false
